# ANum

./: .gitignore  .travis.yml  ANum.cabal  CHANGELOG.md  LICENSE  README.md  stack.yaml
.github/workflows/: haskell.yml
Data/: ANum.hs
src/Data/: ANum.hs
test/: Main.hs
