name:                ANum
version:             0.2.0.2
synopsis:            Num instance for Applicatives provided via the ANum newtype
homepage:            https://github.com/DanBurton/ANum#readme
bug-reports:         https://github.com/DanBurton/ANum/issues
license:             BSD3
license-file:        LICENSE
author:              Dan Burton
maintainer:          danburton.email@gmail.com
copyright:           (c) Dan Burton 2013 - 2025
category:            Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md, CHANGELOG.md
tested-with:         GHC == 9.12.2
                   , GHC == 9.10.2
                   , GHC == 9.8.4
                   , GHC == 9.6.3
                   , GHC == 9.4.8
                   , GHC == 9.2.8
                   , GHC == 9.0.2
                   , GHC == 8.10.7
                   , GHC == 8.8.4
                   , GHC == 8.6.5
                   , GHC == 8.4.4

library
  default-language:    Haskell2010
  ghc-options:         -Wcompat -Wall -Werror
  hs-source-dirs:      src
  exposed-modules:     Data.ANum
  other-extensions:    GeneralizedNewtypeDeriving
  build-depends:       base >= 4.8 && < 5

test-suite ANum-test
  default-language:    Haskell2010
  ghc-options:         -Wcompat -Wall -Werror
  hs-source-dirs:      test
  main-is:             Main.hs
  type:                exitcode-stdio-1.0
  build-depends:       base, ANum

source-repository head
  type: git
  location: git://github.com/DanBurton/ANum.git
